# cookiecutter-poetry

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .flake8  Makefile  README.md  pyproject.toml
